fix: update room api
